@@ -29,6 +29,14 @@ def initialize(context):
             fti = (fti,),
             ).initialize(context)
 
+    from plone.app.folder import nogopip
+
+    context.registerClass(nogopip.GopipIndex,
+        permission = 'Add Pluggable Index',
+        constructors = (nogopip.manage_addGopipForm,
+                        nogopip.manage_addGopipIndex),
+        icon = 'www/index.gif',
+        visibility = None)
 
 # apply monkey patches regarding "nogopip"
 from plone.app.folder.nogopip import applyPatches
