@@ -1,0 +1,44 @@
+<dtml-var manage_page_header>
+<dtml-var "manage_form_title(this(), _, form_title='Add GopipIndex')">
+
+<p class="form-help">
+  A <em>GopipIndex</em> fakes the formerly used "getObjPositionInParent" index
+  by retrieving the necessary information directly from the search results'
+  containers.  It works as a drop-in replacement and makes expensive indexing
+  of each item's position unnecessary.
+</p>
+
+<form action="manage_addGopipIndex" method="post" enctype="multipart/form-data">
+  <table cellspacing="0" cellpadding="2" border="0">
+    <tr>
+      <td align="left" valign="top">
+        <div class="form-label">
+          Id
+        </div>
+      </td>
+      <td align="left" valign="top">
+        <input type="text" name="id" size="40">
+      </td>
+    </tr>
+    <tr>
+      <td align="left" valign="top">
+        <div class="form-optional">
+          Type
+        </div>
+      </td>
+      <td align="left" valign="top">
+        GopipIndex
+      </td>
+    </tr>
+    <tr>
+      <td align="left" valign="top"></td>
+      <td align="left" valign="top">
+        <div class="form-element">
+          <input class="form-element" type="submit" name="submit" value=" Add ">
+        </div>
+      </td>
+    </tr>
+  </table>
+</form>
+
+<dtml-var manage_page_footer>
